--- a/estudiantes.html
+++ b/estudiantes.html
@@ -16,31 +16,29 @@
     <header>
         <nav class="navbar navbar-expand-lg" style="background-color: white;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="img/Sudrafio.png" alt="Logo" width="30" height="30"></a>
+              <a class="navbar-brand" href="#"><img src="img/Sudrafio.png" alt="Logo" width="40" height="40"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="estudiantes.html">Menu</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="registro.html">Registro</a>
+                    <a class="nav-link active" href="registro.html">Registro</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Nosotros
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a>  </li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="estudiantes.html">Formacion</a>  </li>
+                      <li><a class="dropdown-item" href="#">Docentes</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link active">Disabled</a>
                   </li>
                 </ul>
               </div>
@@ -76,10 +74,21 @@
           </div>
           <nav class="navbar navbar-expand-lg" style="background-color: white;"></nav>
           <div class="container justy" >
-              <div class="row">
+            <h1 class="mt-4 centro">NIVELES DE FORMACION</h1>
+            <div class="mt-5 row">
+              <div class="col-4">
+                  <img src="img/PRE.jpg" alt="" class="w-100 img-fluid">
+              </div>
+              <div class="col-8">
+                <h1 class="mt-5">PREESCOLAR:</h1>
+                <h5 class="justy">Un espacio para crecer, explorar y descubrir el mundo, mediante el desarrollo integral de las dimensiones.</h5>
+                <h5 class="justy">Nuestros niños siempre están al cuidado de su directora de grupo con el apoyo de una practicante, velando así por su bienestar.</h5>
+                <h5 class="justy">Tenemos un especial énfasis en el desarrollo de la corporalidad (Ed. Física), la motricidad (Artística), la exploración (Laboratorios de ciencia), la comunicación (Inglés) y el acercamiento al mundo virtual (tecnología), gracias a la intervención de varios docentes expertos en estas habilidades.</h5>
+                </div>  
+            <div class="row">
                 <div class="col-8">
                 <h1 class="mt-5">PRIMARIA:</h1>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente commodi eligendi quisquam autem eius molestiae aliquid rerum eaque praesentium exercitationem in non perspiciatis nobis aut itaque consequatur reprehenderit, laboriosam sunt iure nemo numquam. Illum beatae cum culpa commodi, quo officia eius. Maiores sed ipsa iste mollitia inventore error nemo aspernatur explicabo delectus placeat odio accusantium similique quas recusandae saepe ducimus minima illum dolor rerum alias, ullam fugit quae aliquam. Saepe ex maiores, iure veritatis sapiente aperiam qui necessitatibus cum blanditiis nesciunt id praesentium earum dignissimos cumque excepturi, quasi deserunt, illum vel. Dolor possimus hic architecto, vitae aliquid laudantium atque reiciendis?</P>
+                <h5>A partir del grado primero se maneja profesorado, esto nos permite que cada docente sea experto en su área, además de enriquecer el crecimiento de los estudiantes, ya que logran encontrarse con diversas metodologías. No te preocupes: Al ingresar a la institución, se hace todo un trabajo gradual para que los niños vayan lentamente incorporándose a la jornada y dinámica académica.</h5>
                 </div>
                 <div class="col-4">
                     <img src="img/Primaria.jpg" alt="" class="w-100 img-fluid">
@@ -90,12 +99,13 @@
           <div class="container justy" >
             <div class="row">
               <div class="col-4">
-                  <img src="img/Primaria.jpg" alt="" class="w-100 img-fluid">
+                  <img src="img/Bachiller.jpg" alt="" class="w-100 img-fluid">
               </div>
               <div class="col-8">
-                <h1 class="mt-5">PRIMARIA:</h1>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente commodi eligendi quisquam autem eius molestiae aliquid rerum eaque praesentium exercitationem in non perspiciatis nobis aut itaque consequatur reprehenderit, laboriosam sunt iure nemo numquam. Illum beatae cum culpa commodi, quo officia eius. Maiores sed ipsa iste mollitia inventore error nemo aspernatur explicabo delectus placeat odio accusantium similique quas recusandae saepe ducimus minima illum dolor rerum alias, ullam fugit quae aliquam. Saepe ex maiores, iure veritatis sapiente aperiam qui necessitatibus cum blanditiis nesciunt id praesentium earum dignissimos cumque excepturi, quasi deserunt, illum vel. Dolor possimus hic architecto, vitae aliquid laudantium atque reiciendis?</P>
+                <h1 class="mt-5">BACHILLERATO:</h1>
+                <h5>Nuestro modelo pedagógico integrador favorece el aprendizaje de competencias a partir de las actividades integradoras que se planean desde diferentes áreas, asimilando el conocimiento como un todo. Para nosotros es de gran importancia el fortalecimiento del inglés, por lo tanto, tenemos una intensidad horaria semanal de 4 horas desde 1° a 11° con el apoyo de Richmond Solutions ®</h5>
                 </div>
+                <nav class="navbar navbar-expand-lg" style="background-color: white;"></nav>
             </div>
         </div>
     </main>
