--- a/index.html
+++ b/index.html
@@ -15,27 +15,24 @@
       <Header>
         <nav class="navbar navbar-expand-lg" style="background-color: white;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="img/Sudrafio.png" alt="Logo" width="30" height="30"></a>
+              <a class="navbar-brand" href="#"><img src="img/Sudrafio.png" alt="Logo" width="40" height="40"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="estudiantes.html">Menu</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Menu</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="registro.html">Registro</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a>  </li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="estudiantes.html">Formacion</a>  </li>
+                      <li><a class="dropdown-item" href="#">Docentes</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -50,24 +47,23 @@
         <video src="video/El Colegio El Sufragio cumple 80 años.mp4" class="w-100" controls></video>
       </main>
       <section>
-          <p></p>
       </section>
       <section>
-          <div class="container mt-5 text-center "> 
+          <div class="container mt-5  "> 
             <div class="row">
                 <div class="col-6 color1">
-                    <h1 class="mt-3">RESEÑA HISTORIA</h1>
-                    <p>Un regalo de los hijos de Don Bosco y un sueño realizado, hacer vivo el espíritu y el estilo de Don Bosco, iniciar la tarea de la educación, en un ambiente parroquial y familiar de este poblado sector de la ciudad, noble, decente y cristiano por esencia.
+                    <h1 class="mt-3 centro">RESEÑA HISTORIA</h1>
+                    <p class="">Un regalo de los hijos de Don Bosco y un sueño realizado, hacer vivo el espíritu y el estilo de Don Bosco, iniciar la tarea de la educación, en un ambiente parroquial y familiar de este poblado sector de la ciudad, noble, decente y cristiano por esencia.
                     Nuestro colegio abrió sus puertas con cerca de 113 estudiantes por lo pronto y para ese año los tres primeros grupos de instrucción primaria…todo faltaba y lo había todo: el espíritu de Don Bosco, poderoso, lleno de optimismo y alegría.</p>
                     <img src="img/Historia.jpg" alt="Historia" class="w-100">
                 </div>
                 <div class="col-6 color2">
-                    <h1 class="mt-3">MI HISTORIA</h1>
+                    <h1 class="mt-3 centro">MI HISTORIA</h1>
                     <p>En la actualidad puedo mencionar que he vivido grandes momentos en el Colegio Salesiano El Sufragio, pero todo tiene un comienzo. En el año 2012 seria la primera vez que entraria en los terrenos de la institución, un pequeño yo con recien 5 años cumplidos observa por primera vez donde se desarrollaria su vida en los proximos años, empezando desde el grado de transicion donde conoceria varios de mis amigos y compañeros que me acompañarian en este extenso recorrido, donde conoci a su vez grandes maestros que me formaron en mis conocimientos. Muchos eventos memorables como las interclases para disfrutar del deporte o en antioqueñidad para aprender y disfrutar de la cultura de este bello país. Ahora que el recorrido esta casi completo solo puedo agradecer por el buen regalo que me dio mi institucion.</p>
                     <hr>
-                    <h1>PROFESORES MEMORABLES</h1>
+                    <h1 class="centro">PROFESORES MEMORABLES</h1>
                     <img src="img/Cossio.jpg" alt="" class="w-100">
-                    <h2 class="mt-3">William Cossio</h2>
+                    <h2 class="mt-3 centro">William Cossio</h2>
                 </div>
               </div>
           </div>
