--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Salesiano</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,18 +25,18 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="registro.html">Registro</a>
+                    <a class="nav-link active" href="registro.html">Registro</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="estudiantes.html">Formacion</a>  </li>
-                      <li><a class="dropdown-item" href="#">Docentes</a></li>
+                      <li><a class="dropdown-item" href="profe.html">Docentes</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link active" href="admin.html">Admin</a>
                   </li>
                 </ul>
               </div>
@@ -60,10 +60,6 @@
                 <div class="col-6 color2">
                     <h1 class="mt-3 centro">MI HISTORIA</h1>
                     <p>En la actualidad puedo mencionar que he vivido grandes momentos en el Colegio Salesiano El Sufragio, pero todo tiene un comienzo. En el año 2012 seria la primera vez que entraria en los terrenos de la institución, un pequeño yo con recien 5 años cumplidos observa por primera vez donde se desarrollaria su vida en los proximos años, empezando desde el grado de transicion donde conoceria varios de mis amigos y compañeros que me acompañarian en este extenso recorrido, donde conoci a su vez grandes maestros que me formaron en mis conocimientos. Muchos eventos memorables como las interclases para disfrutar del deporte o en antioqueñidad para aprender y disfrutar de la cultura de este bello país. Ahora que el recorrido esta casi completo solo puedo agradecer por el buen regalo que me dio mi institucion.</p>
-                    <hr>
-                    <h1 class="centro">PROFESORES MEMORABLES</h1>
-                    <img src="img/Cossio.jpg" alt="" class="w-100">
-                    <h2 class="mt-3 centro">William Cossio</h2>
                 </div>
               </div>
           </div>
