--- a/profe.html
+++ b/profe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sufragio</title>
+    <title>Docentes</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,14 +12,111 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
-<body>
+<body class="fuente centro">
     <header>
-
+        <nav class="navbar navbar-expand-lg" style="background-color: white;">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/Sudrafio.png" alt="Logo" width="40" height="40"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Menu</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="registro.html">Registro</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros
+                    </a>
+                    <ul class="dropdown-menu active" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="estudiantes.html">Formacion</a>  </li>
+                      <li><a class="dropdown-item" href="profe.html">Docentes</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="admin.html">Admin</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
-
+        <hr>
+        <h1 class="center mt-5">Docentes</h1>
+        <hr class="mt-5">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/Pro1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Pro2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Pro3.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-4 color1">
+                    <h1>Preescolar</h1>
+                    <p class="justy">En el nivel conocido como preescolar no llegue realmete a pasar mucho tiempo, por mi parte ingrese a la institucion en transicion que es el ultimo periodo de esta etapa pero definitivamente puedo recordar con caricho a una profesora en especial de la cual guardo un gran aprecio por su forma de ser que la vuelve una gran persona, dicha persona es la profesora Claudia que tiene una personalidad muy entrañable y que demuestra de gran manera su cariño a todos los chicos y chicas que se hace cargo, definitivamete alguien dificil de olvidar y que simpre voy a agradecer por ese amor y dedicacion que demostraba y seguie demostrando día a día.</p>
+                </div>
+                <div class="col-4">
+                    <h1>Primaria</h1>
+                    <p class="justy">Primaria seria ese primer paso que daria en mi desarrollo de la educación superior, donde comenzaria a ver nuevos temas una cada vez un poco mas complejo como podrian ser las matematicas y otros donde aprendia diferente información del mundo como Ciencias Sociales y Ciencias Naturales, un periodo importante en mi vida donde reforce amistades que perduran hasta hoy en día y periodo que me permitio conocer a diferentes maestros que enseñaron algo nuevos cada día. En mi punto de vista puedo destacar.</p>
+                </div>
+                <div class="col-4 color2 ">
+                    <h1>Bachillerato</h1>
+                    <p class="justy">El bachillerato, esa ultima etapa que debo vivir en este periodo de educación y la cual estoy bastante cerca a finalizar definitivamente en este punto es donde se ha prencenciado con los años la subi del nivel de exigencia en mi Formacion y donde a lo largo de los años he formado lo que soy hoy en día, pasando de ser un niño a un adolecente proximo a ser adulto y aun que tal vez fue la etapa donde vi a la escuela como algo pesado pero considero que es una de las etapas de las cuales mas disfrute al ser una version mayor de mi mismo y como he mencionado en etapas anteriores creo que puedo destacar unos maestros de esta etapa, El profesor Juan Gonzalo o conocido como "Chalo" que me acompaño varios años en mi formacion de la educacion fisica y otros como Felipe Toro, una gran persona con mucho dedicacion por el planeta y del cual puedo tomar inspiracion para ayudar a mi hogar y su compañia.</p>
+                </div>
+            </div>
+        </div>
+        
+            <h1>REGISTRO</h1>
+            <div class="container centro color3 mt-5">
+                <form>
+                    <div class="mb-4">
+                      <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-4">
+                      <label for="exampleInputPassword1" class="form-label">Apellidos</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-4">
+                        <label for="exampleInputPassword1" class="form-label">Materia</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                      </div>
+                      <div class="mb-4">
+                        <label for="exampleInputPassword1" class="form-label">Telefono</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                      </div>
+                    <button type="submit" class=" btn btn-primary">Registro</button>
+                  </form>
+            </div>
+            <nav class="navbar navbar-expand-lg" style="background-color: white;"></nav>
+            
     </main>
-    <footer>
+    <footer class="bg-dark p-5 text-white text-center">
         <div class="container">
             <div class="row">
                 <div class="col-4">
