--- a/admin.html
+++ b/admin.html
@@ -29,23 +29,11 @@
                   <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Acudiente</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                  </div>
-                  <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Sexo</label>
+                    <label for="exampleInputPassword1" class="form-label">Cargo</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                   </div>
                   <div class="mb-4">
                     <label for="exampleInputPassword1" class="form-label">Dirección</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                  </div>
-                  <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Barrio</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                  </div>
-                  <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Estrato</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                   </div>
                 <button type="submit" class=" btn btn-primary">Registro</button>
@@ -60,10 +48,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
-
-
-
-
