--- a/estudiantes.html
+++ b/estudiantes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sufragio</title>
+    <title>Formación Academica</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,36 +14,35 @@
 </head>
 <body class="fuente justy">
     <header>
-        <nav class="navbar navbar-expand-lg" style="background-color: white;">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="img/Sudrafio.png" alt="Logo" width="40" height="40"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Menu</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="registro.html">Registro</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Nosotros
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="estudiantes.html">Formacion</a>  </li>
-                      <li><a class="dropdown-item" href="#">Docentes</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active">Disabled</a>
-                  </li>
+      <nav class="navbar navbar-expand-lg" style="background-color: white;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="img/Sudrafio.png" alt="Logo" width="40" height="40"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="registro.html">Registro</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="estudiantes.html">Formacion</a>  </li>
+                  <li><a class="dropdown-item" href="profe.html">Docentes</a></li>
                 </ul>
-              </div>
-            </div>
-          </nav>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="admin.html">Admin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -107,6 +106,18 @@
                 </div>
                 <nav class="navbar navbar-expand-lg" style="background-color: white;"></nav>
             </div>
+        </div>
+        <div class="container">
+            <div class="row mt-5">
+            <div class="col-5">
+            </div>
+            <div class="col-2">
+              <a href="registro.html"><button type="button" class="btn btn-primary">Inscribete</button></a>
+            </div>
+            <div class="col-5">
+            </div>
+            </div>
+            <div class="row mt-5"></div>
         </div>
     </main>
     <footer class="bg-dark p-5 text-white text-center">
